# autoflex

./: .gitignore  .gitmodules  LICENSE  README.md  development.html  genindex.html  get_started.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  structure.html
.github/workflows/: ci.yaml  gh_pages_deploy.yaml
_sources/: get_started.rst  index.rst  structure.rst
_sources/api/: descriptors.rst
_sources/directives/: autoflex.rst  index.rst  overview.rst
_sources/examples/: demo.rst  index.rst
_static/css/: autoflex.css
api/: descriptors.html  fields.html  index.html
autoflex/: __init__.py  directives.py  extractors.py  field.py  inspectors.py  logging.py  types.py  validators.py  version_manager.py
autoflex/constructors/: field_info_to_property.py  parameter_table.py
autoflex/descriptors/: field.py
autoflex/directives/: __init__.py  autoflex.py  flexsummary.py  flextree.py
autoflex/directives/flextree/: adapter.py  collector.py  directive.py
autoflex/extractors/: __init__.py  core.py  physical.py
autoflex/styles/: setup.py
autoflex/types/: __init__.py  core.py  descriptors.py  field.py  field_info.py  parameters.py  property.py  structures.py
demo/: __init__.py  basic_class.py
directives/: autoflex.html  index.html  overview.html
docs/: conf.py  custom_toctree.py  development.rst  get_started.rst  index.rst  structure.rst  types.rst
docs/_templates/: base.rst
docs/api/: descriptors.rst  fields.rst  index.rst
docs/configuration/: index.rst
docs/directives/: autoflex.rst  flexsummary.rst  flextree.rst  index.rst  overview.rst
docs/examples/: demo.rst  index.rst  myClass.py  tidy3d.rst  usage_performance.ipynb
examples/: demo.html  index.html  tidy3d.html
sphinxcontrib/autoflex/: __init__.py  install.py  parameters.py
tests/: conftest.py  test_directive.py  test_import.py  test_package.py
tests/extractors/: test_field_extractors.py
