[tool.poetry]
name = "sphinxcontrib-autoflex"
version = "0.0.1"
description = "A flexible, nicer way of generating API docs without requiring custom docstrings."
authors = ["daquintero <dario a quintero at gmail dot com>"]
homepage = "http://www.sphinx-doc.org/"
license = "BSD" # Replace with your project's license, if different
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities"
]
packages = [
    { include = "sphinxcontrib", from = "." }
]


[tool.poetry.dependencies]
python = ">=3.9"
sphinx = {version="^7"}

# Testing and linting
pytest = {version="*", optional=true}
mypy = {version="*", optional=true}
flake8 = {version="*", optional=true}

[tool.poetry.extras]
develop = [
    "pytest",
    "mypy",
    "flake8"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "skip"
incremental = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.flake8]
show-source = true
builtins = "unicode"
