[tool.poetry]
name = "autoflex"
version = "0.0.1"
description = "A flexible, elegant way to structure API docs."
authors = ["daquintero <dario a quintero at gmail dot com>", "dario at flexcompute dot com"]
homepage = "http://www.sphinx-doc.org/"
license = "BSD" # Replace with your project's license, if different
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities"
]
packages = [
    { include = "autoflex", from = "." }
]


[tool.poetry.dependencies]
python = ">=3.10"
docutils = ">=0.16,<1.0"
pydantic = {version="^2"}
sphinx = {version="^7"}


# Testing, linting and docs
sphinx_book_theme = {version = "*", optional = true}
pytest = {version="*", optional=true}
mypy = {version="*", optional=true}
flake8 = {version="*", optional=true}

[tool.poetry.extras]
dev = [
    "sphinx_book_theme",
    "pytest",
    "mypy",
    "flake8"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "skip"
incremental = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.flake8]
show-source = true
builtins = "unicode"
