[tool.poetry]
name = "autoflex"
version = "0.0.1"
description = "A flexible, elegant way to structure API docs."
authors = ["daquintero <dario a quintero at gmail dot com>", "dario at flexcompute dot com"]
homepage = "http://www.sphinx-doc.org/"
license = "BSD" # Replace with your project's license, if different
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities"
]
packages = [
    { include = "autoflex", from = "." },
    { include = "demo", from = "." }
]


[tool.poetry.dependencies]
python = ">=3.10, <3.12"
docutils = ">=0.16,<1.0"
pydantic = {version="^2"}
sphinx = {version="^7"}


# Testing, linting and docs
sphinx_book_theme = {version = "*", optional = true}
pytest = {version="*", optional=true}

# For custom class verification with our existing classes
tidy3d = {version="*", optional=true}


[tool.poetry.extras]
dev = [
    "sphinx_book_theme",
    "pytest",
    "tidy3d",
    "flow360"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
